[gd_scene load_steps=5 format=3 uid="uid://bkrrmx2twhic1"]

[ext_resource type="Texture2D" uid="uid://dvayj3xtdtrxg" path="res://sprites/other/spr_blastZone.png" id="1_c4crq"]
[ext_resource type="Script" path="res://scripts/spikeBall.gd" id="2_lipe6"]
[ext_resource type="AudioStream" uid="uid://c7ro0anmvl8da" path="res://sounds/sfx_bubbleHit.wav" id="3_75a45"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2iskj"]
size = Vector2(32, 32)

[node name="blastZone" type="Sprite2D"]
modulate = Color(1, 1, 1, 0.415686)
texture = ExtResource("1_c4crq")
centered = false
script = ExtResource("2_lipe6")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_2iskj")

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_75a45")
bus = &"Sound"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
