[gd_scene load_steps=4 format=3 uid="uid://cr2emb22ntqj4"]

[ext_resource type="Texture2D" uid="uid://d01oruv5swrtm" path="res://sprites/obstacles/spr_spikeBallNew.png" id="1_puwtj"]
[ext_resource type="Script" path="res://scripts/spikeBall.gd" id="2_c3810"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bew2f"]
radius = 6.0

[node name="SpikeBall" type="Node2D"]
script = ExtResource("2_c3810")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(4.8, 4.8)

[node name="SprSpikeBall" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_puwtj")

[node name="Area2D" type="Area2D" parent="SprSpikeBall"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SprSpikeBall/Area2D"]
shape = SubResource("CircleShape2D_bew2f")
disabled = true

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="SprSpikeBall/Area2D" to="." method="_on_area_2d_body_entered"]
